tests/ui/parser/character-indexing-bug-in-splice-lines-69130.rs
// Issue 69130: character indexing bug in rustc_errors::CodeSuggestion::splice_lines().

enum F {
M (ยง& u8)}
//~^ ERROR unknown start of token
//~| ERROR missing lifetime specifier
fn main() {}
